# audio-to-text

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
audio_to_text/: __init__.py  cli.py  downloader.py  transcriber.py
