[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-to-text-cli"
version = "1.0.0"
description = "音频下载 + 语音转文字 CLI 工具，支持 B站/YouTube 等视频平台及直链音频，中文简繁体可选"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
keywords = ["audio", "transcribe", "whisper", "speech-to-text", "bilibili", "youtube", "faster-whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "yt-dlp",
    "faster-whisper>=1.0.0",
    "requests",
    "imageio-ffmpeg",
    "opencc-python-reimplemented",
]

[project.scripts]
audio-to-text = "audio_to_text.cli:main"

[project.urls]
Homepage = "https://github.com/afuaide/audio-to-text-cli"

[tool.setuptools.packages.find]
include = ["audio_to_text*"]
